--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <nav>
-            <a href="">Web Studio</a>
+            <a href="WebStudio">WebStudio</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
@@ -31,20 +31,20 @@
     <section>
         <ul>
             <li>
-                <h2>Strategy</h2>
+                <h3>Strategy</h3>
                 <p>Our goal is to identify the business
                     problem to walk away with the perfect and creative solution. </p>
             </li>
             <li>
-                <h2>Punctuality</h2>
+                <h3>Punctuality</h3>
                 <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
             <li>
-                <h2>Diligence</h2>
+                <h3>Diligence</h3>
                 <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
             <li>
-                <h2>Technologies</h2>
+                <h3>Technologies</h3>
                 <p> Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
         </ul>
@@ -54,25 +54,21 @@
         <h2>Our Team</h2>
         <ul>
             <li>
-                <a href="images/img.jpg"></a>
                 <img src="images/img.jpg" alt="Mark Guerrero" width="264" height="260"/>
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <a href="images/img(1).jpg"></a>
                 <img src="images/img(1).jpg" alt="Tom Ford" width="264" height="260"/>
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <a href="images/img(3).jpg"></a>
                 <img src="images/img(3).jpg" alt="Camila Garcia" width="264" height="260"/>
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <a href="images/img(4).jpg" ></a>
                 <img src="images/img(4).jpg" alt="Daniel Wilson" width="264" height="260"/>
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
@@ -83,7 +79,7 @@
    </main>
 </body>
 <footer>
-    <h2>WebStudio</h2>
+    <a href="WebStudio">WebStudio</a>
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </html>
