--- a/index.html
+++ b/index.html
@@ -55,22 +55,22 @@
         <h2>Our Team</h2>
         <ul>
             <li>
-                <img src="./images/mark_guerrero.jpg" alt="photo_Mark_Guerrero" width="264" height="260"/>
+                <img src="./images/mark_guerrero.jpg" alt="photo:Mark-Guerrero" width="264" height="260"/>
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="./images/tom_ford.jpg" alt="photo_Tom_Ford" width="264" height="260"/>
+                <img src="./images/tom_ford.jpg" alt="photo:Tom-Ford" width="264" height="260"/>
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="./images/camila_carcia.jpg" alt="photo_Camila_Garcia" width="264" height="260"/>
+                <img src="./images/camila_carcia.jpg" alt="photo:Camila-Garcia" width="264" height="260"/>
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./images/daniel_wilson.jpg" alt="photo_Daniel_Wilson" width="264" height="260"/>
+                <img src="./images/daniel_wilson.jpg" alt="photo:Daniel-Wilson" width="264" height="260"/>
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
             </li>
